<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="8">

    <TextView
        android:id="@+id/progressTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/progress_22_42"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="32dp"
            app:cardElevation="8dp"
            android:layout_margin="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">
                <TextView
                    android:id="@+id/cardText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/questiontext"
                    android:fontFamily="@font/poppins_extrabold"
                    android:textAlignment="center"
                    android:textSize="16sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_mediumitalic"
            android:text="@string/swipe_left_for_false"
            android:textAlignment="center"
            android:textColor="#0277BD"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_mediumitalic"
            android:text="@string/swipe_right_for_true"
            android:textAlignment="center"
            android:textColor="#0277BD" />
    </LinearLayout>

</LinearLayout>
<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test.activity.TestActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Test activity"/>
</LinearLayout>-->
